<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MyActivity">

        <TextView
            android:id="@+id/text_AP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Academic Program"/>

        <Spinner
            android:id="@+id/spinner_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAlignment="gravity"
            android:drawSelectorOnTop="true"
            android:entries="@array/spinner_items">SHS Student Registration</Spinner>

        <EditText
            android:id="@+id/text_last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_AP"
            android:hint="@string/text_last"/>

        <EditText
            android:id="@+id/text_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_first"
            android:layout_below="@id/text_last"/>

        <EditText
            android:id="@+id/text_middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_middle"
            android:layout_below="@id/text_first"/>

        <TextView
            android:id="@+id/text_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_middle"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/text_gender"
            android:textSize="20dp"/>

        <RadioGroup
            android:id="@+id/RadioGroup_t"
            android:layout_below="@id/text_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radiobutton_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_male"
                android:layout_weight="0.5"/>
            <RadioButton
                android:id="@+id/radiobutton_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_female"
                android:layout_weight="1"
                />
        </RadioGroup>


        <TextView
            android:id="@+id/text_requirement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RadioGroup_t"
            android:text="@string/text_requirement"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"/>

        <CheckBox
            android:id="@+id/checkbox_orig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_orig"
            android:layout_below="@id/text_requirement"/>

        <CheckBox
            android:id="@+id/checkbox_nso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_nso"
            android:layout_below="@id/checkbox_orig"/>

        <CheckBox
            android:id="@+id/checkbox_cert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_cert"
            android:layout_below="@id/checkbox_nso"/>

        <CheckBox
            android:id="@+id/checkbox_cert2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_cert2"
            android:layout_below="@id/checkbox_cert"/>

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_submit"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/checkbox_cert2"
            android:onClick="onClick"/>

    </RelativeLayout>
</ScrollView>